# inference-benchmarker

./: README.md  justfile
extra/dashboard/: app.py  parse_results.py  pyproject.toml
src/: benchmark.rs  executors.rs  lib.rs  main.rs  requests.rs  results.rs  scheduler.rs  table.rs  writers.rs
