[project]
name = "dashboard"
version = "0.1.0"
description = "Inference Benchmarker Dashboard"
dependencies = [
    "click>=8.1.7",
    "gradio>=5.23.1",
    "pandas>=2.2.2",
    "pyarrow>=19.0.1",
]
requires-python = ">=3.11"

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
